[package]
authors = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>", "Wojciech Polak <frondeus@gmail.com>", "Łukasz Biel <lukasz.p.biel@gmail.com>"]
categories = ["development-tools", "development-tools::testing"]
description = "Provides #[test_case(...)] procedural macro attribute for generating parametrized test cases easily"
documentation = "https://docs.rs/test-case"
edition = "2021"
exclude = ["tests/snapshots/**/*"]
keywords = ["test", "case", "tests", "unit", "testing"]
license = "MIT"
name = "test-case"
readme = "README.md"
repository = "https://github.com/frondeus/test-case"
rust-version = "1.63"
version = "3.3.1"

[features]
with-regex = ["regex", "test-case-macros/with-regex"]

[badges]
maintenance = {status = "actively-developed"}

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
regex = {version = "1.11", optional = true}
test-case-macros = {version = "3.2.1", path = "crates/test-case-macros", default-features = false}

[dev-dependencies]
insta = "1.42"
itertools = "0.14"
regex = "1.11"

[workspace]
members = ["crates/*"]

[[test]]
name = "acceptance"
path = "tests/acceptance_tests.rs"
